fix overflow in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body,html{
+	width: 100%;
+	height: 100%;
+	overflow-x:hidden;
+}
+
 #title{
   border-radius: 10px;
   border: 3px solid #8b9dc3 ;
